<resources>
    <string name="app_name">Telemesh</string>
    <string name="activity_view_profile">My profile</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="signup">Next</string>
    <!--    <string name="no_item_found">No item found</string>-->
    <string name="done">Done</string>
    <string name="myDigits"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 </string>
    <string name="create_user">Create User</string>
    <string name="select_avatar">Select an avatar</string>
    <string name="select_photo">Select Avatar</string>
...
    <string name="app_version">Version:</string>

    <string name="no_contact_available">No user found</string>
    <string name="no_conversation">No Conversation Yet</string>
    <string name="no_message_available">No broadcast message for you</string>

    <string name="search">Search People</string>
    <string name="type_message">Type a message</string>

    // Fixed value for getting cursor drawable from Edit text or search view
    <!--    <string name="cursordrawable">mCursorDrawableRes</string>-->

    <string name="today">Today</string>
...
    <string name="welcome_back">Welcome back</string>
    <string name="import_my_profile">Import Another ID</string>
    <!--    <string name="scan_my_profile_qr">scan my profile qr</string>-->
    <string name="search_background">search background</string>
    <string name="please_set_up_an_8_digit_pin_for_your_account_security">Please set up an 8 digit password for your account security. Password must contain at least 1 letter, number, and special character.</string>
    <string name="pin_instruction">Please remember your password for you will need this in case of  account recovery.</string>
    <string name="skip">Continue</string>
    <string name="clear_search_text">Clear search text</string>
    <string name="close_search">Close search</string>
    <string name="content_description_import_success">Import Success</string>
    <string name="import_successful">Import successful</string>
    <string name="pin_provide_instruction">Please provide your password to continue.</string>
    <string name="continue_button">Continue</string>
    <string name="enter_eight_digit_password">Please Enter at least 8 digit password</string>
    <string name="enter_password_here">Enter password here:</string>
...
    <!--    <string name="search_hint">Search</string>-->
    <!--    <string name="clear_button">Clear</string>-->
    <string name="please_wait">Please Wait…</string>
    <string name="app_updating_please_wait">App Updating please wait..</string>
    <string name="feedback">Feedback</string>

    <!--     <string name="spinner_title">Favourite</string>-->

    <string name="no_favorite">No favorite user found</string>
    <string name="no_groups">No group found</string>
    <string name="minimu_ssid_character">Minimum character limit is 3</string>
    <string name="change">Change</string>
    <string name="a_new_version">A new version </string>
...
    <string name="permission">Permission needed</string>
    <string name="permission_for_signup">Need to allow permission on Telemesh app to work properly. You can give permission manually from setting</string>

    <string name="gps_alert">Turn on location</string>
    <string name="for_better_performance">To get the best results please turn on your location service.</string>

    <string name="negative_button"><![CDATA[<font color=\'#083480\'>I’m a new user</font>]]></string>
    <string name="button_postivive"><![CDATA[<font color=\'#083480\'>Continue</font>]]></string>
    <string name="alert_title_text"><![CDATA[<font color=\'#ff5f25\'>WARNING!!</font>]]></string>
    <string name="service_app_alert_title_text"><![CDATA[<font color=\'#ff5f25\'>Update!!</font>]]></string>
    <string name="service_app_update_message">To smoothly use all features of Teleemsh app please update Telemesh Service app.</string>
    <string name="button_later"><![CDATA[<font color=\'#083480\'>Later</font>]]></string>
    <string name="i_understand">I Understand</string>
...
