...
            layout="@layout/app_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/activity_security_scroll"
            style="@style/ScrollStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_security_scroll_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_30">

                <TextView
                    android:id="@+id/text_view_title"
...
                    android:textColor="@color/new_user_button_color"
                    android:background="@drawable/ractangular_white"
                    app:layout_constraintEnd_toEndOf="@+id/instruction_container"
                    app:layout_constraintTop_toBottomOf="@+id/instruction_container" />

                <TextView
                    android:id="@+id/button_skip"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="0dp"
                    android:gravity="center"
                    android:text="@string/skip"
...
